fixed alignment on tech stack icons

--- a/css/index.css
+++ b/css/index.css
@@ -54,15 +54,15 @@ li {
 .container {
   max-width: 1024px;
   margin: 0 auto;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 48px;
+  padding-bottom: 72px;
 }
 
 .heading {
   font-size: 50px;
   padding-bottom: 32px;
   text-align: center;
-  padding-top: 24px;
+  padding-top: 48px;
   padding-bottom: 0px;
   max-width: 100%;
 }
@@ -203,6 +203,7 @@ li {
 .grid > div::before,
 .grid > div > img {
   grid-area: 1 / 1 / 2 / 2;
+  margin: 0 auto;
 }
 .grid > div > img {
   width: 70%;
@@ -286,5 +287,9 @@ li {
   color: #e0e1dd;
   text-decoration: none;
   padding: 8px;
+}
+
+footer .container {
+  padding: 0;
 }
 /* End footer */
